--- a/scss/components/_footer-social-media.scss
+++ b/scss/components/_footer-social-media.scss
@@ -4,7 +4,8 @@
     margin-top: 2.5px;
 
     .img-bs-grid {
-        width: 25px;
+        width: 60px;
+        margin-bottom: 10px;
         justify-content: $centerbt;
 
     }
