--- a/scss/components/_body.scss
+++ b/scss/components/_body.scss
@@ -1,10 +1,16 @@
 /* Body Generales */
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Roboto', 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
     color:black;
-      
-      p {
-        @include paddings;
-      }
-}
+    background-color: #E5E5F7;
+    opacity: 1;
+    background-image:  radial-gradient(#444CF7 0.7000000000000001px, transparent 0.7000000000000001px), radial-gradient(#444CF7 0.7000000000000001px, #E5E5F7 0.7000000000000001px);
+    background-size: 28px 28px;
+    background-position: 0 0 14px 14px;
+  
+} 
