--- a/scss/components/_main-quienes.scss
+++ b/scss/components/_main-quienes.scss
@@ -1,14 +1,166 @@
 /* Main: quienes somos, filosofia */
-
-
-#quienes, #filosofia {
-    padding-top: 55px;
-    background-color: $color2;
+.contenedor-identidad {
     @include paddings;
-
-    
+    background-color: rgb(8, 8, 8);
 }
 
+#filosofia,
+#quienes {
+    padding-top: 55px;
 
-    
-    
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+#categories {
+    overflow: hidden;
+    width: 70%;
+    margin: 0 auto;
+}
+.clr:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+#categories li {
+    position: relative;
+    list-style-type: none;
+    width: 27.85714285714286%;
+    /* = (100-2.5) / 3.5 */
+    padding-bottom: 32.16760145166612%;
+    /* =  width /0.866 */
+    float: left;
+    overflow: hidden;
+    visibility: hidden;
+
+    -webkit-transform: rotate(-60deg) skewY(30deg);
+    -ms-transform: rotate(-60deg) skewY(30deg);
+    transform: rotate(-60deg) skewY(30deg);
+}
+#categories li:nth-child(3n+2) {
+    margin: 0 1%;
+}
+#categories li:nth-child(6n+4) {
+    margin-left: 0.5%;
+}
+#categories li:nth-child(6n+4),
+#categories li:nth-child(6n+5),
+#categories li:nth-child(6n+6) {
+    margin-top: -6.9285714285%;
+    margin-bottom: -6.9285714285%;
+
+    -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+    -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+    transform: translateX(50%) rotate(-60deg) skewY(30deg);
+}
+#categories li:nth-child(6n+4):last-child,
+#categories li:nth-child(6n+5):last-child,
+#categories li:nth-child(6n+6):last-child {
+    margin-bottom: 0;
+}
+#categories li * {
+    position: absolute;
+    visibility: visible;
+}
+#categories li > div {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: #fff;
+    overflow: hidden;
+    -webkit-transform: skewY(-30deg) rotate(60deg);
+    -ms-transform: skewY(-30deg) rotate(60deg);
+    transform: skewY(-30deg) rotate(60deg);
+    -webkit-backface-vissibility: hidden;
+
+}
+
+/* HEXa CONTENT */
+#categories li img {
+    left: -100%;
+    right: -100%;
+    width: auto;
+    height: 100%;
+    margin: 0 auto;
+}
+
+#categories div h2,
+#categories div p {
+    width: 90%;
+    padding: 0 5%;
+    background-color: #0d6efd;
+    background-color: #0d6dfdf8;
+    font-family: 'Roboto', sans-serif;
+    -webkit-transition: top 0.2s ease-out, bottom 0.2s ease-out, 0.2s padding 0.2s ease-out;
+    -ms-transition: top 0.2s ease-out, bottom 0.2s ease-out, 0.2s padding 0.2s ease-out;
+    transition: top 0.2s ease-out, bottom 0.2s ease-out, 0.2s padding 0.2s ease-out;
+}
+#categories li h2 {
+    bottom: 110%;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 1.5em;
+    padding-top: 100%;
+    padding-bottom: 100%;
+}
+#categories li h2:after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -1px;
+    left: 45%;
+    width: 10%;
+    text-align: center;
+    z-index: 1;
+    border-bottom: 2px solid #fff;
+}
+#categories li p {
+    padding-top: 50%;
+    top: 110%;
+    padding-bottom: 50%;
+}
+
+/* HOVER EFFECT  */
+
+#categories li div:hover h2 {
+    bottom: 50%;
+    padding-bottom: 10%;
+}
+
+#categories li div:hover p {
+    top: 50%;
+    padding-top: 10%;
+}
+
+.tituloquienes {
+    color: rgb(156, 146, 146);
+    text-decoration: none;
+    border: 1px solid #000;
+    background-color: black;
+    padding: 0.5em 0.7em;
+    margin: 1%;
+    transition: color 0.5s;
+    overflow: hidden;
+}
+
+.tituloquienes::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 130%;
+    height: 100%;
+    background-color: rgb(156, 146, 146);
+    z-index: -1;
+    transform-origin: 0 0;
+    transform: translateX(-100%) skewX(-45deg);
+    transition: transform 0.5s;
+}
+.tituloquienes:hover {
+    color: #fff;
+}
+.tituloquienes:hover:before {
+    transform: translateX(0) skewX(-45deg);
+}
