--- a/scss/components/_main-servicios.scss
+++ b/scss/components/_main-servicios.scss
@@ -4,13 +4,17 @@
 }
 
 .ta-2 {
-    height: 150px;
-    width: 150px;
+    height: 100px;
+    width: 100px;
     margin:10px auto;
     display:block;
 }
 
 #servicios {
+        display: flex;
+        align-items: center;
+        padding-top: 65px;
+        justify-content: center;
         background-color: $color5;
                            
 }
